# parsingfreelans

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  pyproject.toml  railway.json
scripts/: mark_feedback.py  save_session.py
src/freelans_bot/: app.py  worker.py
src/freelans_bot/adapters/: base.py  errors.py  playwright_adapter.py  russian_platforms.py
src/freelans_bot/config/: platforms.py  platforms.yaml  settings.py
src/freelans_bot/core/: models.py  orchestrator.py
src/freelans_bot/integrations/: telegram.py
src/freelans_bot/services/: proposal.py  proposal_validation.py  scoring.py
src/freelans_bot/storage/: db.py
src/freelans_bot/utils/: text.py
